fix: serve manifest.json

--- a/src/web.config
+++ b/src/web.config
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
- 
+
 <configuration>
   <system.webServer>
-    <rewrite>
+    <staticContent>
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+    </staticContent>
+    <!-- <rewrite>
       <rules>
       <rule name="Angular Routes" stopProcessing="true">
         <match url=".*" />
@@ -14,6 +17,6 @@
         <action type="Rewrite" url="index.html" />
         </rule>
       </rules>
-    </rewrite>
+    </rewrite> -->
   </system.webServer>
-</configuration> 
+</configuration>
