fix: re add web.config rules

--- a/src/web.config
+++ b/src/web.config
@@ -5,7 +5,7 @@
     <staticContent>
       <mimeMap fileExtension=".json" mimeType="application/json" />
     </staticContent>
-    <!-- <rewrite>
+    <rewrite>
       <rules>
       <rule name="Angular Routes" stopProcessing="true">
         <match url=".*" />
@@ -17,7 +17,6 @@
         <action type="Rewrite" url="index.html" />
         </rule>
       </rules>
-    </rewrite> -->
-
+    </rewrite>
   </system.webServer>
 </configuration>
