--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --aot --host 0.0.0.0",
-    "build": "ng build --prod --aot --output-path docs --base-href ./",
+    "build": "ng build --prod --aot --output-path docs --base-href /",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
