--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-  "short_name": "NgColombia",
-  "name": "Ng Colombia 2018",
+  "short_name": "NgColombia Lab",
+  "name": "Ng Colombia 2018 lab",
   "start_url": "https://pwangcol.azurewebsites.net/",
-  "theme_color": "#211056",
+  "theme_color": "#6f1b1b",
   "background_color": "#392cb2",
   "display": "standalone",
   "orientation": "any",
