--- a/src/web.config
+++ b/src/web.config
@@ -8,11 +8,13 @@
     <rewrite>
       <rules>
       <rule name="Angular Routes" stopProcessing="true">
-        <match url="^(.*)$" ignoreCase="false" />
+        <match url=".*" />
         <conditions logicalGrouping="MatchAll">
-          <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" pattern="" ignoreCase="false" />
+          <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
         </conditions>
-        <action type="Rewrite" url="index.html" appendQueryString="true" />
+        <action type="Rewrite" url="/index.html" />
         </rule>
       </rules>
     </rewrite>
