fix(release): update @angular packages to 6.0.0-rc.1

--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -7,7 +7,8 @@
       "files": [
         "/favicon.ico",
         "/index.html",
-        "/assets/js/wall.js"
+        "/assets/js/wall.js",
+        "/manifest.json"
       ],
       "versionedFiles": [
         "/*.bundle.css",
