--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^0.4.3",
-    "@angular/animations": "^5.2.9",
+    "@angular/animations": "^6.0.0-rc.1",
     "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
+    "@angular/common": "^6.0.0-rc.1",
+    "@angular/compiler": "^6.0.0-rc.1",
+    "@angular/core": "^6.0.0-rc.1",
+    "@angular/forms": "^6.0.0-rc.1",
+    "@angular/http": "^6.0.0-rc.1",
     "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@angular/service-worker": "^5.1.0",
+    "@angular/platform-browser": "^6.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
+    "@angular/router": "^6.0.0-rc.1",
+    "@angular/service-worker": "^6.0.0-rc.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -35,8 +35,8 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
+    "@angular/compiler-cli": "^6.0.0-rc.1",
+    "@angular/language-service": "^6.0.0-rc.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -52,6 +52,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.7.2"
   }
 }
