--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@angular-devkit/core": "^0.4.3",
     "@angular/animations": "^6.0.0-rc.1",
-    "@angular/cdk": "^5.2.4",
+    "@angular/cdk": "^6.0.0-rc.1",
     "@angular/common": "^6.0.0-rc.1",
     "@angular/compiler": "^6.0.0-rc.1",
     "@angular/core": "^6.0.0-rc.1",
     "@angular/forms": "^6.0.0-rc.1",
     "@angular/http": "^6.0.0-rc.1",
-    "@angular/material": "^5.2.4",
+    "@angular/material": "^6.0.0-rc.1",
     "@angular/platform-browser": "^6.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
     "@angular/router": "^6.0.0-rc.1",
@@ -28,7 +28,8 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.5.2",
+    "rxjs": "6.0.0-beta.1",
+    "rxjs-compat": "6.0.0-beta.1",
     "wall.js": "^0.10.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
