--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^0.4.3",
-    "@angular/animations": "^6.0.0-rc.1",
-    "@angular/cdk": "^6.0.0-rc.1",
-    "@angular/common": "^6.0.0-rc.1",
-    "@angular/compiler": "^6.0.0-rc.1",
-    "@angular/core": "^6.0.0-rc.1",
-    "@angular/forms": "^6.0.0-rc.1",
-    "@angular/http": "^6.0.0-rc.1",
-    "@angular/material": "^6.0.0-rc.1",
-    "@angular/platform-browser": "^6.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
-    "@angular/router": "^6.0.0-rc.1",
-    "@angular/service-worker": "^6.0.0-rc.1",
+    "@angular/animations": "^6.0.0-rc.5",
+    "@angular/cdk": "^6.0.0-rc.5",
+    "@angular/common": "^6.0.0-rc.5",
+    "@angular/compiler": "^6.0.0-rc.5",
+    "@angular/core": "^6.0.0-rc.5",
+    "@angular/forms": "^6.0.0-rc.5",
+    "@angular/http": "^6.0.0-rc.5",
+    "@angular/material": "^6.0.0-rc.5",
+    "@angular/platform-browser": "^6.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
+    "@angular/router": "^6.0.0-rc.5",
+    "@angular/service-worker": "^6.0.0-rc.5",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "6.0.0-beta.1",
-    "rxjs-compat": "6.0.0-beta.1",
+    "rxjs": "rxjs@^6.0.0-rc.0",
+    "rxjs-compat": "rxjs@^6.0.0-rc.0",
     "wall.js": "^0.10.2",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^6.0.0-rc.1",
-    "@angular/language-service": "^6.0.0-rc.1",
+    "@angular/cli": "^1.7.4",
+    "@angular/compiler-cli": "^6.0.0-rc.5",
+    "@angular/language-service": "^6.0.0-rc.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
